@@ -926,26 +926,6 @@ name|CoreAdminParams
 operator|.
 name|CoreAdminAction
 operator|.
-name|PERSIST
-import|;
-end_import
-
-begin_import
-import|import static
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|common
-operator|.
-name|params
-operator|.
-name|CoreAdminParams
-operator|.
-name|CoreAdminAction
-operator|.
 name|PREPRECOVERY
 import|;
 end_import
@@ -1204,7 +1184,169 @@ name|admin
 operator|.
 name|CoreAdminHandler
 operator|.
-name|*
+name|COMPLETED
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|handler
+operator|.
+name|admin
+operator|.
+name|CoreAdminHandler
+operator|.
+name|CallInfo
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|handler
+operator|.
+name|admin
+operator|.
+name|CoreAdminHandler
+operator|.
+name|FAILED
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|handler
+operator|.
+name|admin
+operator|.
+name|CoreAdminHandler
+operator|.
+name|Invocable
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|handler
+operator|.
+name|admin
+operator|.
+name|CoreAdminHandler
+operator|.
+name|RESPONSE
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|handler
+operator|.
+name|admin
+operator|.
+name|CoreAdminHandler
+operator|.
+name|RESPONSE_MESSAGE
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|handler
+operator|.
+name|admin
+operator|.
+name|CoreAdminHandler
+operator|.
+name|RESPONSE_STATUS
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|handler
+operator|.
+name|admin
+operator|.
+name|CoreAdminHandler
+operator|.
+name|RUNNING
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|handler
+operator|.
+name|admin
+operator|.
+name|CoreAdminHandler
+operator|.
+name|buildCoreParams
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|handler
+operator|.
+name|admin
+operator|.
+name|CoreAdminHandler
+operator|.
+name|normalizePath
 import|;
 end_import
 
@@ -1615,37 +1757,6 @@ name|ex
 argument_list|)
 throw|;
 block|}
-block|}
-block|}
-block|,
-DECL|method|PERSIST_OP
-DECL|method|PERSIST_OP
-name|PERSIST_OP
-parameter_list|(
-name|PERSIST
-parameter_list|)
-block|{
-annotation|@
-name|Override
-specifier|public
-name|void
-name|call
-parameter_list|(
-name|CallInfo
-name|callInfo
-parameter_list|)
-block|{
-name|callInfo
-operator|.
-name|rsp
-operator|.
-name|add
-argument_list|(
-literal|"message"
-argument_list|,
-literal|"The PERSIST action has been deprecated"
-argument_list|)
-expr_stmt|;
 block|}
 block|}
 block|,
